--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@
   <body>
     <div class="nav">
       <img id="breadbug"
-              src="Assets/breadbug spin 2.gif" 
+              src="Assets/Gifs/Breadbug_Smooth.gif" 
               alt="Digital render of a breadbug spinning">
       <div class="link_button">
           <a href="index.html">Home</a>
