finished navigation icons

--- a/cat.html
+++ b/cat.html
@@ -14,21 +14,26 @@
         <img id="breadbug"
                 src="Assets/Gifs/Breadbug_Smooth.gif" 
                 alt="Digital render of a breadbug spinning">
-        <div class="link_button">
-            <a href="index.html">Home</a>
-        </div>
-        <div class="link_button">
-            <a href="games.html">Games</a>
-        </div>
-        <div class="link_button">
-            <a href="cat.html">Cat</a>
-        </div>
-        <div class="link_button">
-            <a href="notes.html">Notes</a>
-        </div>
-        <div class="link_button">
-            <a href="links.html">Links</a>
-        </div>
+        <a class= "link_button" id="icon_home" href="index.html">
+            <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
+            Home     
+        </a>
+        <a class= "link_button" id="icon_games" href="games.html">
+            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
+              Games     
+        </a>
+        <a class= "link_button" id="icon_cat" href="cat.html">
+            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
+            Cat     
+        </a>
+        <a class= "link_button" id="icon_notes" href="notes.html">
+            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
+            Notes     
+        </a>
+        <a class= "link_button" id="icon_links" href="links.html">
+            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
+            Links     
+        </a>
     </div>
 
     <div class="content" id="cat_gallery">
