--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="nav">
         <img id="breadbug"
-                src="Assets/Gifs/Breadbug_Smooth.gif" 
+                src="Assets/Gifs/Breadbug_Textured.gif" 
                 alt="Digital render of a breadbug spinning">
         <a class= "link_button" id="icon_home" href="index.html">
             <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
@@ -46,19 +46,10 @@
                 I'm a programmer and game developer from Australia. 
                 I mostly work in Unity and Godot, but I've got experience with lots of different languages and tools.
                 I also dabble in other areas, like game modding and art stuff.
-                I like cats and not writing about myself.
             </p>
-            <div class="paragraph_row">
-                <img id="pikmin_gif"
-                    src="Assets/Gifs/Red_Pikmin_Smooth.gif" 
-                    alt="Digital render of a breadbug spinning">
-                <img id="pikmin_gif"
-                    src="Assets/Gifs/Yellow_Pikmin_Smooth.gif" 
-                    alt="Digital render of a breadbug spinning">
-                <img id="pikmin_gif"
-                    src="Assets/Gifs/Blue_Pikmin_Smooth.gif" 
-                    alt="Digital render of a breadbug spinning">
-            </div>
+            <img class="screenshot"
+                src="Assets/Belle/belle_10.png" 
+                alt="My cat Belle sitting grumpily in a half eaten carboard box">
             <p>
                 Site last updated <span id="updatedate"></span>, with <span id="viewcount"></span> unique visitors!
             </p>
