--- a/cat.html
+++ b/cat.html
@@ -12,7 +12,7 @@
   <body>
     <div class="nav">
         <img id="breadbug"
-                src="Assets/Gifs/Breadbug_Smooth.gif" 
+                src="Assets/Gifs/Breadbug_Textured.gif" 
                 alt="Digital render of a breadbug spinning">
         <a class= "link_button" id="icon_home" href="index.html">
             <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
@@ -50,7 +50,7 @@
             <img class="cat" src="Assets/Belle/belle_07.png" alt="Belle being cute and fluffy">
             <img class="cat" src="Assets/Belle/belle_19.png" alt="Belle being interupted during a butt-licking">
             <img class="cat" src="Assets/Belle/belle_09.png" alt="Belle attacking a feather toy while sitting precariously on the head of a chair">
-            <img class="cat" src="Assets/Belle/belle_10.png" alt="Belle sitting grumpily in a half eaten carboard box">
+            <img class="cat" src="Assets/Belle/belle_24.png" alt="Belle sitting on a bed under a sunbeam">
             <img class="cat" src="Assets/Belle/belle_08.png" alt="Belle being small">
             <img class="cat" src="Assets/Belle/belle_11.png" alt="Belle with a groggy expression (she is sleepy)">
             <img class="cat" src="Assets/Belle/belle_01.png" alt="Belle laying on a rug">
