--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@
   <body>
     <div class="nav">
         <img id="breadbug"
-                src="Assets/Gifs/Breadbug_Smooth.gif" 
+                src="Assets/Gifs/Breadbug_Textured.gif" 
                 alt="Digital render of a breadbug spinning">
         <a class= "link_button" id="icon_home" href="index.html">
             <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
@@ -101,6 +101,8 @@
           <a href="https://bongo.cat/">Bongo Cat</a> - little music thingy with cat and stuff
           <br><br>
           <a href="https://freesewing.org/">FreeSewing</a> - repository of free sewing patterns and a tool to customise them based on your measurements
+          <br><br>
+          <a href="https://hjkm.littlegleam.com/">Hajikami</a> - site for sharing Game Builder Garage codes
           <br><br>
           Console hacking guides:
           <ul>
