--- a/cat.html
+++ b/cat.html
@@ -11,29 +11,37 @@
   </head>
   <body>
     <div class="nav">
-        <img id="breadbug"
+        <div class="link_button_list">
+            <img id="breadbug"
                 src="Assets/Gifs/Breadbug_Textured.gif" 
                 alt="Digital render of a breadbug spinning">
-        <a class= "link_button" id="icon_home" href="index.html">
-            <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
-            Home     
-        </a>
-        <a class= "link_button" id="icon_games" href="games.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
-              Games     
-        </a>
-        <a class= "link_button" id="icon_cat" href="cat.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
-            Cat     
-        </a>
-        <a class= "link_button" id="icon_notes" href="notes.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
-            Notes     
-        </a>
-        <a class= "link_button" id="icon_links" href="links.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
-            Links     
-        </a>
+            <h1>BUG'S STUFF</h1>
+            <img id="breadbug"
+                src="Assets/Gifs/Breadbug_Textured.gif" 
+                alt="Digital render of a breadbug spinning">
+        </div>
+        <div class="link_button_list">
+            <a class= "link_button" id="icon_home" href="index.html">
+                <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
+                <p class="link_button_text">Home</p>     
+            </a>
+            <a class= "link_button" id="icon_games" href="games.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
+                <p class="link_button_text">Games</p>   
+            </a>
+            <a class= "link_button" id="icon_cat" href="cat.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
+                <p class="link_button_text">Cat</p>   
+            </a>
+            <a class= "link_button" id="icon_notes" href="notes.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
+                <p class="link_button_text">Notes</p> 
+            </a>
+            <a class= "link_button" id="icon_links" href="links.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
+                <p class="link_button_text">Links</p> 
+            </a>
+        </div>
     </div>
 
     <div class="content" id="cat_gallery">
@@ -63,6 +71,5 @@
             <img class="cat" src="Assets/Belle/belle_22.png" alt="Belle peeking between some wooden guard rails">
         </div>
     </div>
-    <div id="mobile_warning"><h2>This site works best on desktop!</h2></div>
   </body>
 </html>
