--- a/index.html
+++ b/index.html
@@ -11,41 +11,45 @@
   </head>
   <body>
     <div class="nav">
-        <img id="breadbug"
+        <div class="link_button_list">
+            <img id="breadbug"
                 src="Assets/Gifs/Breadbug_Textured.gif" 
                 alt="Digital render of a breadbug spinning">
-        <a class= "link_button" id="icon_home" href="index.html">
-            <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
-            Home     
-        </a>
-        <a class= "link_button" id="icon_games" href="games.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
-              Games     
-        </a>
-        <a class= "link_button" id="icon_cat" href="cat.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
-            Cat     
-        </a>
-        <a class= "link_button" id="icon_notes" href="notes.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
-            Notes     
-        </a>
-        <a class= "link_button" id="icon_links" href="links.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
-            Links     
-        </a>
+            <h1>BUG'S STUFF</h1>
+            <img id="breadbug"
+                src="Assets/Gifs/Breadbug_Textured.gif" 
+                alt="Digital render of a breadbug spinning">
+        </div>
+        <div class="link_button_list">
+            <a class= "link_button" id="icon_home" href="index.html">
+                <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
+                <p class="link_button_text">Home</p>     
+            </a>
+            <a class= "link_button" id="icon_games" href="games.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
+                <p class="link_button_text">Games</p>   
+            </a>
+            <a class= "link_button" id="icon_cat" href="cat.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
+                <p class="link_button_text">Cat</p>   
+            </a>
+            <a class= "link_button" id="icon_notes" href="notes.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
+                <p class="link_button_text">Notes</p> 
+            </a>
+            <a class= "link_button" id="icon_links" href="links.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
+                <p class="link_button_text">Links</p> 
+            </a>
+        </div>
     </div>
 
     <div class="content">
-        <div class="header">
-            <h1>BUG'S STUFF</h1>
-        </div>
+
         <div class="paragraph">
             <p>
-                Hi, I'm GeneralBug and this is my cool website for my cool stuff. 
-                I'm a programmer and game developer from Australia. 
-                I mostly work in Unity and Godot, but I've got experience with lots of different languages and tools.
-                I also dabble in other areas, like game modding and art stuff.
+                Hello, I'm GeneralBug and this is my cool website for my cool stuff. 
+                I'm a game developer from Australia!
             </p>
             <img class="screenshot"
                 src="Assets/Belle/belle_10.png" 
@@ -56,7 +60,7 @@
             <a href="https://neocities.org"><img src="Assets/neocities.png" alt="Hosted by Neocites"></a>
         </div>
     </div>
-    <div id="mobile_warning"><h2>This site works best on desktop!</h2></div>
+
     <script>
         // Visit count, https://dannarchy.com/tut/tut_002
         var xhttp = new XMLHttpRequest();
