--- a/links.html
+++ b/links.html
@@ -11,80 +11,80 @@
   </head>
   <body>
     <div class="nav">
-        <img id="breadbug"
-                src="Assets/Gifs/Breadbug_Textured.gif" 
-                alt="Digital render of a breadbug spinning">
-        <a class= "link_button" id="icon_home" href="index.html">
-            <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
-            Home     
-        </a>
-        <a class= "link_button" id="icon_games" href="games.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
-              Games     
-        </a>
-        <a class= "link_button" id="icon_cat" href="cat.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
-            Cat     
-        </a>
-        <a class= "link_button" id="icon_notes" href="notes.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
-            Notes     
-        </a>
-        <a class= "link_button" id="icon_links" href="links.html">
-            <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
-            Links     
-        </a>
-    </div>
+      <div class="link_button_list">
+          <img id="breadbug"
+              src="Assets/Gifs/Breadbug_Textured.gif" 
+              alt="Digital render of a breadbug spinning">
+          <h1>BUG'S STUFF</h1>
+          <img id="breadbug"
+              src="Assets/Gifs/Breadbug_Textured.gif" 
+              alt="Digital render of a breadbug spinning">
+      </div>
+      <div class="link_button_list">
+          <a class= "link_button" id="icon_home" href="index.html">
+              <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
+              <p class="link_button_text">Home</p>     
+          </a>
+          <a class= "link_button" id="icon_games" href="games.html">
+              <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
+              <p class="link_button_text">Games</p>   
+          </a>
+          <a class= "link_button" id="icon_cat" href="cat.html">
+              <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
+              <p class="link_button_text">Cat</p>   
+          </a>
+          <a class= "link_button" id="icon_notes" href="notes.html">
+              <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
+              <p class="link_button_text">Notes</p> 
+          </a>
+          <a class= "link_button" id="icon_links" href="links.html">
+              <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
+              <p class="link_button_text">Links</p> 
+          </a>
+      </div>
+  </div>
     
     <div class="content">
-      <div class="header">
-          <h1>MY STUFF</h1>
-      </div>
+      <h4>MY STUFF!</h4>
       <div class="paragraph_row">
-        My stuff<br>
+
         <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug"><img class="link_icon" src="Assets/Logos/logo_mastodon.png" alt="Mastodon"></a>
         <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
         <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a>
         <a href="https://modrinth.com/user/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_modrinth.png" alt="Modrinth"></a><br>
       </div>
-      <div class="header">
-          <h1>FRIEND'S STUFF</h1>
-      </div>
+      <h4>FRIEND'S STUFF!</h4>
       <div class="paragraph left_justified">
-        Stuff made by my friends and stuff!<br><br>
+
         <a href="https://rozetta-stone.neocities.org/">Rozetta Stone Emporium</a> - Roze writes stuff
         <br><br>
         <a href="https://emmabond02.wixsite.com/portfolio">Emma's Portfolio</a> - Emma draws stuff
         <br><br>
         <a href="https://benclark03.myportfolio.com/">Ben's Portfolio</a> - Ben animates stuff
       </div>
-      <div class="header">
-          <h1>WEBRING</h1>
-      </div>
+      <h4>WEBRING!</h4>
       <div class="paragraph">
-        Webring!
+
         <div id='PikRing'>
           <link rel="stylesheet" href="https://nickolox.neocities.org/pikring/css/pikring.css">
           <script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-variables.js"></script>
           <script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-widget.js"></script>
         </div>
       </div>
-      <div class="header">
-        <h1>OTHER STUFF</h1>
-      </div>
+      <h4>OTHER STUFF!</h4>
       <div class="paragraph left_justified">
+
           A big list of stuff I thought was cool, some of which you might find cool too!<br><br>
 
-
-          <a href="https://pf2m.com/tools/mii/">Mii Renderer</a> - Lets you export high quality renders of Miis
+          <a href="https://mii.nxw.pw/">Mii Creator</a> - a browser based Mii maker and rendering tool
+          <br><br>
+          <a href="https://mii-unsecure.ariankordi.net/">Mii Renderer (REAL)</a> - Lets you export high quality renders of Miis
           <br><br>
           <a href="https://www.steamgriddb.com/">SteamGridDB</a> - huge database of images for filling out the thumbnails for non-Steam games or replacing existing ones
           <br><br>
           <a href="https://github.com/libretro-thumbnails">libretro-thumbnails</a> - big database of images meant for use with RetroArch, includes title screens, box art and gameplay screenshots for thousands of games
           <br><br>
           <a href="https://paletton.com/">Paletton</a> - tool for generating colour palettes 
-          <br><br>
-          <a href="https://quixel.com/megascans/free">Quixel Megascans</a> - big library of detailed 3D models and textures which are free to use with Unreal Engine, and I think you can use them elsewhere with a license
           <br><br>
           <a href="https://ncase.me/anxiety/">Adventures With Anxiety!</a> - little thingy about anxiety by <a href="https://ncase.me/">Nicky Case</a> 
           <br><br>
@@ -96,7 +96,7 @@
           <br><br>
           <a href="https://coolgifs.neocities.org/">The web site of cool gifs</a>
           <br><br>
-          <a href="https://gifcities.org/">GifCities</a> - search the Internet Archive for gifs!
+          <a href="https://gifcities.org/">GifCities</a> - search the Internet Archive for gifs
           <br><br>
           <a href="https://bongo.cat/">Bongo Cat</a> - little music thingy with cat and stuff
           <br><br>
@@ -115,16 +115,20 @@
             <li><a href="https://ootrandomizer.com/generator">Ocarina of Time Randomiser</a></li>
             <li><a href="https://github.com/ZoeyZolotova/mm-rando">Majora's Mask Randomiser</a> - unlike OOT, this doesn't have a web app thing, just a download </li>
             <li><a href="https://ootmm.com/">OOT - MM Combined Randomiser</a></li>
-            <li><a href="https://archipelago.gg/">Archipelago</a> - cross-game "multiworld" randomiser, intended for multiple players across several games
+            <li><a href="https://archipelago.gg/">Archipelago</a> - cross-game "multiworld" randomiser, intended for multiple players across several games </li>
+            <li><a href="https://pikhacker.github.io/">PikHacker's Website</a> - verious Pikmin hacks by PikHacker, including Pikmin 1² which has a built-in randomiser </li>
+          
           </ul>
           <a href="https://github.com/Admentus64/Patcher64Plus-Tool">Patcher64+</a> - tool used for N64 modding, such as OOT/MM redux patches
           <br><br>
           <a href="https://modloader64.com/index.html">ModLoader64</a> - exactly what it sounds like. It's mostly used for multiplayer mods of some N64 games
           <br><br>
-
+          <a href="https://museo.app/">Museo</a> - a search engine for a database of free to use images from some museums
+          <br><br>
+          <a href="https://acpatterns.com/editor">Animal Crossing Pattern Tool</a> - a tool for making Animal Crossing patterns, as well as a repository of existing ones
+          <br><br>
       </div>
     </div>
-    <div id="mobile_warning"><h2>This site works best on desktop!</h2></div>
   </body>
       <!-- steam and modrinth if i put enough stuff to justify adding links
     <a href="https://steamcommunity.com/profiles/76561198163788245/myworkshopfiles"><img class="link_icon" src="Assets/Logos/logo_steam.png" alt="Steam Workshop"></a>
