updated game page finally

--- a/games.html
+++ b/games.html
@@ -51,35 +51,10 @@
             </p>
         </div>
         <div class="paragraph">
-            <h4>
-                Stel (2020)
-            </h4>
-            <img class="screenshot" src="Assets/Screenshots/screenshot_Stel.png" alt="A screenshot of Stel, featuring the titular character riding a magic sled through a snowy landscape.">
+            <h4>Game-A-Week Stuff (2025)</h4>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_gaw25.png" alt="Four combined screenshots from four of my Game-A-Week games. TODO insert specific descriptions">
             <p class="game">
-                My friends and I's university capstone project, which was featured in the ACMI+RMIT 2020 Audience Lab. You play as a boy trying to find a cure for his fathers illness, so you have to go through a series of trials. I worked mostly on the UI, inventory and interaction systems, as well as miscellaneous other bits like the sled. Full credits can be found on the itch page.
-            </p>
-        </div>
-        <div class="paragraph">
-            <h4>Tale of Bear² (2020)</h4>
-            <img class="screenshot" src="Assets/Screenshots/screenshot_BearBear.png" alt="A screenshot of Tale of BearBear, featuring a teddy bear in a combat encounter with a green slime.">
-            <p class="game">
-                Another project for uni my friend Artemis and I worked on, it's a turn-based RPG where you play as a teddy bear doing quests for other plushies. I worked mostly on the combat system. Also it's pronounced "Bear Bear".
-                <br>
-            </p>
-        </div>
-        <div class="paragraph">
-            <h4>Steering Not Included (2018)</h4>
-            <img class="screenshot" src="Assets/Screenshots/screenshot_Steering.png" alt="A screenshot of Steering Not Included, featuring two small spinning turret-satellite things in space shooting eachother.">
-            <p class="game">
-                A game made for a university jam, where the requirement was minimum controls. It's an arcade-y "Asteroids" inspired game where each player has one "fire" button for their little spinning turret thing, which also gives it momentum. The goal is to be the last one standing.
-                <br>
-            </p>
-        </div>
-        <div class="paragraph">
-            <h4>Tooth Fish (2022)</h4>
-            <img class="screenshot" src="Assets/Screenshots/screenshot_Fish.png" alt="A screenshot of Tooth Fish, featuring an underwater scene of rocks and sand and a spooky fish in the corner.">
-            <p class="game">
-                Made for 7dfps 2022, you play as a diver hunting mutant fish with a harpoon gun. We intended to add two more large fish and audio, but haven't gotten around to it as of writing. My first attempt at using Godot, too!
+                I made several games for Game-A-Week 2025! <a href="https://itch.io/c/5517052/game-a-week-2025">Click here</a> for the itch collection to see details on each.
                 <br>
             </p>
         </div>
@@ -92,10 +67,49 @@
             </p>
         </div>
         <div class="paragraph">
+            <h4>
+                Stel (2020)
+            </h4>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_Stel.png" alt="A screenshot of Stel, featuring the titular character riding a magic sled through a snowy landscape.">
+            <p class="game">
+                My friends and I's university capstone project, which was featured in the ACMI+RMIT 2020 Audience Lab. You play as a boy trying to find a cure for his fathers illness, so you have to go through a series of trials. I worked mostly on the UI, inventory and interaction systems, as well as miscellaneous other bits like the sled. Full credits can be found on the itch page.
+            </p>
+        </div>
+        <div class="paragraph">
+            <h4>Steering Not Included (2018)</h4>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_Steering.png" alt="A screenshot of Steering Not Included, featuring two small spinning turret-satellite things in space shooting eachother.">
+            <p class="game">
+                A game made for a university jam, where the requirement was minimum controls. It's an arcade-y "Asteroids" inspired game where each player has one "fire" button for their little spinning turret thing, which also gives it momentum. The goal is to be the last one standing.
+                <br>
+            </p>
+        </div>
+        <h4>Unfinished Stuff!</h4>
+        <div class="paragraph">
+            <p class="game">
+                Some other unfinished stuff!
+            </p>
+        </div>
+        <div class="paragraph">
+            <h4>Tooth Fish (2022)</h4>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_Fish.png" alt="A screenshot of Tooth Fish, featuring an underwater scene of rocks and sand and a spooky fish in the corner.">
+            <p class="game">
+                Made for 7dfps 2022, you play as a diver hunting mutant fish with a harpoon gun. We intended to add two more large fish and audio, but haven't gotten around to it as of writing. My first attempt at using Godot, too!
+                <br>
+            </p>
+        </div>
+        <div class="paragraph">
+            <h4>Tale of Bear² (2020)</h4>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_BearBear.png" alt="A screenshot of Tale of BearBear, featuring a teddy bear in a combat encounter with a green slime.">
+            <p class="game">
+                Another project for uni my friend Artemis and I worked on, it's a turn-based RPG where you play as a teddy bear doing quests for other plushies. I worked mostly on the combat system. Also it's pronounced "Bear Bear".
+                <br>
+            </p>
+        </div>
+        <div class="paragraph">
             <h4>Flicker (2018)</h4>
             <img class="screenshot" src="Assets/Screenshots/screenshot_Flicker.png" alt="A screenshot of Flicker, featuring a dark environment illuminated by a small fire sprite in the centre, a child in yellow, and two spooky ghosts.">
             <p class="game">
-                My first attempt at a game jam (Extra Jam 2018), prompt "present". You play as a little fire sprite and have to lead a kid to the exit while avoiding ghosts and collecting fuel to maintain your brightness (which the ghosts can't enter). Bad enough that I delisted it, but I'm planning to remake it soon.
+                My first attempt at a game jam (Extra Jam 2018), prompt "present". You play as a little fire sprite and have to lead a kid to the exit while avoiding ghosts and collecting fuel to maintain your brightness (which the ghosts can't enter).
                 <br>
             </p>
         </div>
