--- a/links.html
+++ b/links.html
@@ -76,6 +76,10 @@
 
           A big list of stuff I thought was cool, some of which you might find cool too!<br><br>
 
+          <a href="https://cobalt.tools/">cobalt</a> - an actually good YouTube downloader
+          <br><br>
+          <a href="https://alternativeto.net/">AlternativeTo</a> - site for finding alternatives to software
+          <br><br>
           <a href="https://mii.nxw.pw/">Mii Creator</a> - a browser based Mii maker and rendering tool
           <br><br>
           <a href="https://mii-unsecure.ariankordi.net/">Mii Renderer (REAL)</a> - Lets you export high quality renders of Miis
@@ -109,6 +113,7 @@
             <li><a href="https://3ds.hacks.guide/">3DS</a> (It's pretty easy you know)</li>
             <li><a href="https://wiiu.hacks.guide/">Wii U</a></li>
             <li><a href="https://wii.hacks.guide/">Wii</a></li>
+            <li><a href="https://www.gamebrew.org/wiki/Main_Page">GameBrew</a> - Big wiki for homebrew stuff</li>
           </ul>
           Randomiser mods:
           <ul>
@@ -117,7 +122,6 @@
             <li><a href="https://ootmm.com/">OOT - MM Combined Randomiser</a></li>
             <li><a href="https://archipelago.gg/">Archipelago</a> - cross-game "multiworld" randomiser, intended for multiple players across several games </li>
             <li><a href="https://pikhacker.github.io/">PikHacker's Website</a> - verious Pikmin hacks by PikHacker, including Pikmin 1² which has a built-in randomiser </li>
-          
           </ul>
           <a href="https://github.com/Admentus64/Patcher64Plus-Tool">Patcher64+</a> - tool used for N64 modding, such as OOT/MM redux patches
           <br><br>
@@ -126,6 +130,8 @@
           <a href="https://museo.app/">Museo</a> - a search engine for a database of free to use images from some museums
           <br><br>
           <a href="https://acpatterns.com/editor">Animal Crossing Pattern Tool</a> - a tool for making Animal Crossing patterns, as well as a repository of existing ones
+          <br><br>
+          <a href="https://github.com/zetaPRIME/MultiBound2/">MultiBound2</a> - multi-instance launcher for Starbound
           <br><br>
       </div>
     </div>
