--- a/links.html
+++ b/links.html
@@ -60,7 +60,7 @@
         <br><br>
         <a href="https://emmabond02.wixsite.com/portfolio">Emma's Portfolio</a> - Emma draws stuff
         <br><br>
-        <a href="https://benclark03.myportfolio.com/">Ben's Portfolio</a> - Ben animates stuff
+        <a href="https://benpaulclark54.wixsite.com/benclark">Ben's Portfolio</a> - Ben animates stuff
       </div>
       <h4>WEBRING!</h4>
       <div class="paragraph">
