--- a/cat.html
+++ b/cat.html
@@ -71,5 +71,10 @@
             <img class="cat" src="Assets/Belle/belle_22.png" alt="Belle peeking between some wooden guard rails">
         </div>
     </div>
+    <img class="invisible" src="Assets/Gifs/navigation/icon_home.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_games.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_cat.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_notes.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_links.gif">
   </body>
 </html>
