--- a/games.html
+++ b/games.html
@@ -114,5 +114,10 @@
             </p>
         </div>
     </div>
+    <img class="invisible" src="Assets/Gifs/navigation/icon_home.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_games.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_cat.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_notes.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_links.gif">
   </body>
 </html>
