--- a/index.html
+++ b/index.html
@@ -76,5 +76,10 @@
         xhttp.open("GET", "https://weirdscifi.ratiosemper.com/neocities.php?sitename=buggus", true);
         xhttp.send();
     </script>
+    <img class="invisible" src="Assets/Gifs/navigation/icon_home.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_games.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_cat.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_notes.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_links.gif">
   </body>
 </html>
