--- a/notes.html
+++ b/notes.html
@@ -55,7 +55,9 @@
                 <br>
                 <br>
                 Also also this page uses JavaScript to load everything in from a json file, in case it's blank.
-                <br><br>
+                <br><br>                
+                <a rel="me" href="rss/notes.xml"><img class="link_icon" src="Assets/Logos/logo_rss.png" alt="RSS"></a>
+                <br>
                 <button id="sort_button" onclick="sortList()"></button>
             </p>
         </div>
@@ -63,6 +65,11 @@
             
         </ol>
     </div>
+    <img class="invisible" src="Assets/Gifs/navigation/icon_home.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_games.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_cat.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_notes.gif">
+    <img class="invisible" src="Assets/Gifs/navigation/icon_links.gif">
 </body>
   
 <script>
