--- a/blog.html
+++ b/blog.html
@@ -48,14 +48,12 @@
     <div class="content">
         <div class="paragraph">
             <p>
-                As an exercise intended to improve my own design abilities by analysing other games, I started writing these little "review" things when I play a game (though I don't want them to be reviews, some get more "review-y" than others). They aren't really meant for others, so some of them are very rambly and possibly incomprehensible, so read them at your own risk.
-                <br>
-                <br>
-                Also each is listed with the system I played it on and my general feelings about it (positive/negative). I only started dating them in April 2023, but the earliest are from about 2020, if I remember correctly.              
-                <br>
-                <br>
-                Also also this page uses JavaScript to load everything in from a json file, in case it's blank.
+                My blog! I might write things here, maybe. There's no particular subject or theme, just whatever happens to tickle my fancy. You can read it if you like!
+                <br><br> 
+                Also this page uses JavaScript to load everything in from a json file, in case it's blank.
                 <br><br>
+                <a rel="me" href="rss/blog.xml"><img class="link_icon" src="Assets/Logos/logo_rss.png" alt="RSS"></a>
+                <br>
                 <button id="sort_button" onclick="sortList()"></button>
             </p>
         </div>
