thinking of some Big Changes

--- a/games.html
+++ b/games.html
@@ -51,6 +51,14 @@
             </p>
         </div>
         <div class="paragraph">
+            <h4>All-Seaing Fisheye (2025)</h4>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_sabbyjam25.png" alt="A screenshot of All-Seaing Fisheye, featuring a Neon Tetra that has just been caught">
+            <p class="game">
+                 Made for Sabby Jam 2025, theme "vision". It's a fairly basic fishing game where you fish up fish and read their minds. The mechanics are based on Streetpass Fishing, the DLC fishing game from Streetpass Mii Plaza for the 3DS. The variopus values could use a bit of dialling in, but I'm overall pretty happy with it.
+                <br>
+            </p>
+        </div>
+        <div class="paragraph">
             <h4>Game-A-Week Stuff (2025)</h4>
             <img class="screenshot" src="Assets/Screenshots/screenshot_gaw25.png" alt="Four combined screenshots from four of my Game-A-Week games. TODO insert specific descriptions">
             <p class="game">
