--- a/links.html
+++ b/links.html
@@ -47,11 +47,12 @@
     <div class="content">
       <h4>MY STUFF!</h4>
       <div class="paragraph_row">
-
+        <a href="https://buggus.neocities.org/"><img src="Assets/Gifs/Banner.gif"></a><br>
         <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug"><img class="link_icon" src="Assets/Logos/logo_mastodon.png" alt="Mastodon"></a>
         <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
         <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a>
         <a href="https://modrinth.com/user/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_modrinth.png" alt="Modrinth"></a><br>
+
       </div>
       <h4>FRIEND'S STUFF!</h4>
       <div class="paragraph left_justified">
@@ -61,6 +62,10 @@
         <a href="https://emmabond02.wixsite.com/portfolio">Emma's Portfolio</a> - Emma draws stuff
         <br><br>
         <a href="https://benpaulclark54.wixsite.com/benclark">Ben's Portfolio</a> - Ben animates stuff
+        <br><br>
+        <a href="https://funniest-site.neocities.org/">Funniest Site</a> - Levi ignores stuff
+        <br><br>
+        <a href="https://old-home.faith/">old-home.faith</a> - Wren ruins stuff
       </div>
       <h4>WEBRING!</h4>
       <div class="paragraph">
@@ -108,6 +113,20 @@
           <br><br>
           <a href="https://hjkm.littlegleam.com/">Hajikami</a> - site for sharing Game Builder Garage codes
           <br><br>
+          <a href="https://github.com/Admentus64/Patcher64Plus-Tool">Patcher64+</a> - tool used for N64 modding, such as OOT/MM redux patches
+          <br><br>
+          <a href="https://modloader64.com/index.html">ModLoader64</a> - exactly what it sounds like. It's mostly used for multiplayer mods of some N64 games
+          <br><br>
+          <a href="https://museo.app/">Museo</a> - a search engine for a database of free to use images from some museums
+          <br><br>
+          <a href="https://acpatterns.com/editor">Animal Crossing Pattern Tool</a> - a tool for making Animal Crossing patterns, as well as a repository of existing ones
+          <br><br>
+          <a href="https://github.com/zetaPRIME/MultiBound2/">MultiBound2</a> - multi-instance launcher for Starbound
+          <br><br>
+          <a href="https://bluemoonfalls.com/">Blue Moon Falls</a> - site with all the information and tools for gen 2 Pokemon
+          <br><br>
+          <a href="https://justaqrcode.com/">Just a QR Code</a> - simple tool for generating QR codes
+          <br><br>
           Console hacking guides:
           <ul>
             <li><a href="https://3ds.hacks.guide/">3DS</a> (It's pretty easy you know)</li>
@@ -123,16 +142,7 @@
             <li><a href="https://archipelago.gg/">Archipelago</a> - cross-game "multiworld" randomiser, intended for multiple players across several games </li>
             <li><a href="https://pikhacker.github.io/">PikHacker's Website</a> - verious Pikmin hacks by PikHacker, including Pikmin 1² which has a built-in randomiser </li>
           </ul>
-          <a href="https://github.com/Admentus64/Patcher64Plus-Tool">Patcher64+</a> - tool used for N64 modding, such as OOT/MM redux patches
-          <br><br>
-          <a href="https://modloader64.com/index.html">ModLoader64</a> - exactly what it sounds like. It's mostly used for multiplayer mods of some N64 games
-          <br><br>
-          <a href="https://museo.app/">Museo</a> - a search engine for a database of free to use images from some museums
-          <br><br>
-          <a href="https://acpatterns.com/editor">Animal Crossing Pattern Tool</a> - a tool for making Animal Crossing patterns, as well as a repository of existing ones
-          <br><br>
-          <a href="https://github.com/zetaPRIME/MultiBound2/">MultiBound2</a> - multi-instance launcher for Starbound
-          <br><br>
+
       </div>
     </div>
     <img class="invisible" src="Assets/Gifs/navigation/icon_home.gif">
