big changes, mainly notes are hardcoded now to remove jquery

--- a/links.html
+++ b/links.html
@@ -66,6 +66,9 @@
         <a href="https://funniest-site.neocities.org/">Funniest Site</a> - Levi ignores stuff
         <br><br>
         <a href="https://old-home.faith/">old-home.faith</a> - Wren ruins stuff
+        <br><br>
+        <a href="https://diedoffscreen.neocities.org/">Diedoffscreen</a> - Leo does stuff
+        <br><br>
       </div>
       <h4>WEBRING!</h4>
       <div class="paragraph">
@@ -127,6 +130,11 @@
           <br><br>
           <a href="https://justaqrcode.com/">Just a QR Code</a> - simple tool for generating QR codes
           <br><br>
+          <a href="https://roing.us/">roingus</a> - roingus
+          <br><br>
+          <a href="https://isle.pizza/">LEGO Island Web Port</a> - it's a web port of LEGO Island, believe it or notes
+          <br><br>
+          <a href="https://pkmnclassic.net/">Poké Classic Network</a> - an unofficial continuation of the DS Pokémon game's online servers
           Console hacking guides:
           <ul>
             <li><a href="https://3ds.hacks.guide/">3DS</a> (It's pretty easy you know)</li>
