--- a/notes.html
+++ b/notes.html
@@ -744,6 +744,22 @@
 					<h3>August 2025</h3>
                     <p>An interesting game, I think. The visuals and stuff are really cute, though the portraits are a bit odd looking. The game has two major issues (that I encountered, at least). The game plays kind of more like a factory builder than I expected, and you need to balance production of a variety of different resources but you don't have enough direct control of anything to actually do that effectively, I feel. The main issues seem to be a complete lack of any meaningful influence on item logistics, just trusting that your guys will happen to deliver the necessary stuff on time. Also you need to employ so many people at warehouses (or whatever they were called) that just having one for each resource puts considerable strain on your population. Also also, keeping track of production ratios and requirements is very unclear, which is quite annoying then that's the central focus. The other issue is combat stuff. There is one \"rival\" CPU who will regularly make demands of tribute to you, and if you refuse will invade you. The first time this happened, I noticed the large army they sent just sat on the map edge and did nothing (not sure if that's untended) so I ignored them and then my economy collapsed, as you can't receive migrants during an invasion, though it took me quite a while to figure that out. I slowly zergged them with my gradually rebelling soldiers (who are quite difficult to train, and cost a ton of upkeep), and then after a short time got invaded again with an even stronger force. In another game, I took out a nearby graveyard (which occasionally spawns skeletons) quite easily, then tried the same with a spiders nest which proceeded to slowly wipe out my entire city because every time I would kill any they would immediately respawn. Overall, combat is not good, but would be considerably nicer if producing and maintaining troops was somewhat economically feasible.</p>
                 </div>
+            </li>
+            <li class="sortable" id="091">
+                <button class="collapsible">Jenny LeClue - Detectivú [Switch]</button>
+                <div class="collapsible-content">
+                    <h2>Neutral</h2>
+					<h3>September 2025</h3>
+                    <p>So it was really good for most of it. While I can't speak to how <em>actually</em> impactful any of the decisions were (I'd imagine not particularly), they felt impactful in the moment which is the important part. The presentation is excellent, I love the graphics and the audio and voice acting is very good! Also the story was interesting, and seems like a really good mystery that I figured out at pretty much at the point you're supposed to. The ending was bad enough to drag down the rest of the game a fair bit, unfortunately. At first I thought I'd just gotten the bad ending or something and I needed to solve some extra stuff to figure it out but as far as I can tell, that is just how it ends. It does say \"to be continued\" but I'm not sure how any of the decision-related stuff would carry over; that seems like a pretty important part of it so maybe they'd add the \"sequel\" as DLC or something? It's just very odd.</p>
+                </div>
+            </li> 
+            <li class="sortable" id="092">
+                <button class="collapsible">Turnip Boy Commits Tax Evasion [PC]</button>
+                <div class="collapsible-content">
+                    <h2>Positive</h2>
+					<h3>September 2025</h3>
+                    <p>He sure does! It's very cute and short and pretty. I really like the cat you unlock at the end who gives you hints about collectables, it's a very nice to have, especially in the position I was in, where at that point where all I was missing was a reward for going back to talk to an NPC after completing their quest, which would have taken me a while to find otherwise. The tonal shift in the middle for that one section is quite interesting, though the difficulty spike for that boss is potentially questionable. Also having the post-game thing be combat focused is an odd choice; this game's combat is probably the weakest aspect, being not especially bad but largely uninteresting.</p>
+                </div>
             </li> 
         </ol>
     </div>
