--- a/games.html
+++ b/games.html
@@ -54,7 +54,7 @@
             <h4>All-Seaing Fisheye (2025)</h4>
             <img class="screenshot" src="Assets/Screenshots/screenshot_sabbyjam25.png" alt="A screenshot of All-Seaing Fisheye, featuring a Neon Tetra that has just been caught">
             <p class="game">
-                 Made for Sabby Jam 2025, theme "vision". It's a fairly basic fishing game where you fish up fish and read their minds. The mechanics are based on Streetpass Fishing, the DLC fishing game from Streetpass Mii Plaza for the 3DS. The variopus values could use a bit of dialling in, but I'm overall pretty happy with it.
+                 Made for Sabby Jam 2025, theme "vision". It's a fairly basic fishing game where you fish up fish and read their minds. The mechanics are based on Streetpass Fishing, the DLC fishing game from Streetpass Mii Plaza for the 3DS. The various values could use a bit of dialling in, but I'm overall pretty happy with it.
                 <br>
             </p>
         </div>
